[package]
authors = ['Unit Ventures']
build = 'build.rs'
description = 'Unit Network'
edition = '2018'
homepage = 'https://www.github.com/paulhealy09/unitchain'
license = 'Unlicense'
name = 'unit-network'
repository = 'https://www.github.com/paulhealy09/unitchain'
version = '3.0.0'

[[bin]]
name = 'unit-network'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = '3.0.0'

[dependencies]
jsonrpc-core = '15.1.0'
structopt = '0.3.8'
serde = { features = ['derive'], optional = true, version = '1.0.119' }
serde_json = "1.0.41"
futures = { version = "0.3.9", features = ["compat"] }
hex-literal = "0.3.1"
log = "0.4.8"
rand = "0.7.2"
parking_lot = "0.11.1"
# local dependencies
unit-network-runtime = { path = '../runtime', version = '3.0.0' }
pallet-contracts  = '3.0.0'
pallet-contracts-rpc  = '3.0.0'
pallet-indices  = '3.0.0'
pallet-timestamp = '3.0.0'
pallet-balances = '3.0.0'
pallet-transaction-payment = '3.0.0'
pallet-im-online  = '3.0.0'
pallet-staking = '3.0.0'
pallet-grandpa = '3.0.0'

# Substrate dependencies
frame-benchmarking = '3.0.0'
frame-benchmarking-cli = '3.0.0'
pallet-transaction-payment-rpc = '3.0.0'
sc-basic-authorship = '0.9.0'
sc-cli = { features = ['wasmtime'], version = '0.9.0' }
sc-client-api = '3.0.0'
sc-consensus = '0.9.0'
sc-consensus-aura = '0.9.0'
sc-executor = { features = ['wasmtime'], version = '0.9.0' }
sc-finality-grandpa = '0.9.0'
sc-keystore = '3.0.0'
sc-rpc = '3.0.0'
sc-rpc-api = '0.9.0'
sc-service = { features = ['wasmtime'], version = '0.9.0' }
sc-transaction-pool = '3.0.0'
sp-api = '3.0.0'
sp-block-builder = '3.0.0'
sp-blockchain = '3.0.0'
sp-consensus = '0.9.0'
sp-consensus-aura = '0.9.0'
sp-core = '3.0.0'
sp-finality-grandpa = '3.0.0'
sp-inherents = '3.0.0'
sp-runtime = '3.0.0'
sp-transaction-pool = '3.0.0'
substrate-frame-rpc-system = '3.0.0'

[features]
default = []
runtime-benchmarks = ['unit-network-runtime/runtime-benchmarks']
